--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
-<html lang="en-US" class="js scheme_default js_active  vc_desktop  vc_transform  vc_transform "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en-US" class="js scheme_default js_active  vc_desktop  vc_transform  vc_transform ">
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="format-detection" content="telephone=no">
 <title>AfriCoin Connect</title>
 <meta name="robots" content="max-image-preview:large">
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
 <meta property="og:type" content="article">
-<script type="text/javascript" id="www-widgetapi-script" src="../elviscrypto/www-widgetapi.js" async=""></script>
+<script type="text/javascript" id="www-widgetapi-script" src="./elviscrypto/www-widgetapi.js" async=""></script>
 <script src="./elviscrypto/iframe_api"></script>
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
@@ -69,16 +71,16 @@ background: none !important;
 padding: 0 !important;
 }
 </style>
-<link property="stylesheet" rel="stylesheet" id="wp-block-library-css" href="../elviscrypto/style.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-login-form-block-css" href="../elviscrypto/login-form.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-member-block-css" href="../elviscrypto/member.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-members-block-css" href="../elviscrypto/members.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-dynamic-members-block-css" href="../elviscrypto/dynamic-members.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-latest-activities-block-css" href="../elviscrypto/latest-activities.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="classic-theme-styles-css" href="../elviscrypto/classic-themes.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="wp-block-library-css" href="./elviscrypto/style.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-login-form-block-css" href="./elviscrypto/login-form.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-member-block-css" href="./elviscrypto/member.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-members-block-css" href="./elviscrypto/members.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-dynamic-members-block-css" href="./elviscrypto/dynamic-members.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-latest-activities-block-css" href="./elviscrypto/latest-activities.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="classic-theme-styles-css" href="./elviscrypto/classic-themes.min.css" type="text/css" media="all">
 <style id="global-styles-inline-css" type="text/css">
 body{
---wp--preset--color--black: #0000000;
+--wp--preset--color--black: #000000;
 --wp--preset--color--cyan-bluish-gray: #abb8c3;
 --wp--preset--color--white: #ffffff;
 --wp--preset--color--pale-pink: #f78da7;
@@ -130,25 +132,25 @@ body{
 :where(.wp-block-columns.is-layout-flex){gap: 2em;}
 .wp-block-pullquote{font-size: 1.5em;line-height: 1.6;} 
 </style>
-<link property="stylesheet" rel="stylesheet" id="bbp-default-css" href="../elviscrypto/bbpress.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="bp-legacy-css-css" href="../elviscrypto/buddypress.min.css" type="text/css" media="screen">
-<link property="stylesheet" rel="stylesheet" id="contact-form-7-css" href="../elviscrypto/styles.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="trx_addons-icons-css" href="../elviscrypto/trx_addons_icons-embedded.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="swiperslider-css" href="../elviscrypto/swiper.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="magnific-popup-css" href="../elviscrypto/magnific-popup.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="trx_addons-css" href="../elviscrypto/trx_addons.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="trx_addons-animation-css" href="../elviscrypto/trx_addons.animation.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="trx-donations-style-css" href="../elviscrypto/trx_donations.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="trx-donations-socials-share-style-css" href="../elviscrypto/socials-share-embedded.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="js_composer_front-css" href="../elviscrypto/js_composer.min.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="wpgdprc-front-css-css" href="../elviscrypto/front.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bbp-default-css" href="./elviscrypto/bbpress.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="bp-legacy-css-css" href="./elviscrypto/buddypress.min.css" type="text/css" media="screen">
+<link property="stylesheet" rel="stylesheet" id="contact-form-7-css" href="./elviscrypto/styles.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="trx_addons-icons-css" href="./elviscrypto/trx_addons_icons-embedded.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="swiperslider-css" href="./elviscrypto/swiper.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="magnific-popup-css" href="./elviscrypto/magnific-popup.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="trx_addons-css" href="./elviscrypto/trx_addons.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="trx_addons-animation-css" href="./elviscrypto/trx_addons.animation.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="trx-donations-style-css" href="./elviscrypto/trx_donations.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="trx-donations-socials-share-style-css" href="./elviscrypto/socials-share-embedded.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="js_composer_front-css" href="./elviscrypto/js_composer.min.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="wpgdprc-front-css-css" href="./elviscrypto/front.css" type="text/css" media="all">
 <style id="wpgdprc-front-css-inline-css" type="text/css">
 :root{--wp-gdpr--bar--background-color: #0000000;--wp-gdpr--bar--color: #ffffff;--wp-gdpr--button--background-color: #0000000;--wp-gdpr--button--background-color--darken: #0000000;--wp-gdpr--button--color: #ffffff;}
 </style>
-<link property="stylesheet" rel="stylesheet" id="lymcoin-font-google_fonts-css" href="../elviscrypto/css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="fontello-icons-css" href="../elviscrypto/fontello-embedded.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="lymcoin-main-css" href="../elviscrypto/style.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="lymcoin-add-styles-css" href="../elviscrypto/add-style.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="lymcoin-font-google_fonts-css" href="./elviscrypto/css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="fontello-icons-css" href="./elviscrypto/fontello-embedded.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="lymcoin-main-css" href="./elviscrypto/style.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="lymcoin-add-styles-css" href="./elviscrypto/add-style.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="lymcoin-colors-css" href="./elviscrypto/__colors.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="mediaelement-css" href="./elviscrypto/mediaelementplayer-legacy.min.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="wp-mediaelement-css" href="./elviscrypto/wp-mediaelement.min.css" type="text/css" media="all">
