--- a/index.html
+++ b/index.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
-<html lang="en-US" class="js scheme_default js_active  vc_desktop  vc_transform  vc_transform ">
-<head>
-<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+<html lang="en-US" class="js scheme_default js_active  vc_desktop  vc_transform  vc_transform "><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="format-detection" content="telephone=no">
 <title>AfriCoin Connect</title>
@@ -80,7 +78,7 @@ padding: 0 !important;
 <link property="stylesheet" rel="stylesheet" id="classic-theme-styles-css" href="./elviscrypto/classic-themes.min.css" type="text/css" media="all">
 <style id="global-styles-inline-css" type="text/css">
 body{
---wp--preset--color--black: #000000;
+--wp--preset--color--black: #0000000;
 --wp--preset--color--cyan-bluish-gray: #abb8c3;
 --wp--preset--color--white: #ffffff;
 --wp--preset--color--pale-pink: #f78da7;
