--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@ body{
 <link property="stylesheet" rel="stylesheet" id="fontello-icons-css" href="./elviscrypto/fontello-embedded.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="lymcoin-main-css" href="./elviscrypto/style.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="lymcoin-add-styles-css" href="./elviscrypto/add-style.css" type="text/css" media="all">
-<link property="stylesheet" rel="stylesheet" id="lymcoin-colors-css" href="https://africointech.github.io/africoinconnect-web/elviscrypto/__colors.css" type="text/css" media="all">
+<link property="stylesheet" rel="stylesheet" id="lymcoin-colors-css" href="https://africointech.github.io/elviscrypto/__colors.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="mediaelement-css" href="./elviscrypto/mediaelementplayer-legacy.min.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="wp-mediaelement-css" href="./elviscrypto/wp-mediaelement.min.css" type="text/css" media="all">
 <link property="stylesheet" rel="stylesheet" id="trx_addons-responsive-css" href="./elviscrypto/trx_addons.responsive.css" type="text/css" media="all">
