--- a/index.html
+++ b/index.html
@@ -465,7 +465,7 @@
 		media="all">
 	<link property="stylesheet" rel="stylesheet" id="lymcoin-add-styles-css" href="./elviscrypto/add-style.css"
 		type="text/css" media="all">
-	<link property="stylesheet" rel="stylesheet" id="lymcoin-colors-css" href="./elviscrypto/__colors.css"
+	<link property="stylesheet" rel="stylesheet" id="lymcoin-colors-css" href="./elviscrypto/colors.css"
 		type="text/css" media="all">
 	<link property="stylesheet" rel="stylesheet" id="mediaelement-css"
 		href="./elviscrypto/mediaelementplayer-legacy.min.css" type="text/css" media="all">
