--- a/index.html
+++ b/index.html
@@ -1216,18 +1216,15 @@
 																										id="sc_button_1331699559"
 																										class="sc_button color_style_inverse sc_button_default sc_button_size_large sc_button_with_icon sc_button_icon_left sc_button_hover_slide_bottom sc_button_hover_style_dark"
 																										target="_blank">
-																										<span
+																										<!-- <span
 																											class="sc_button_icon">
 																											<span
 																												class="icon-icon-5">
 																											</span>
-																										</span>
+																										</span> -->
 																										<span
 																											class="sc_button_text">
-																											<span
-																												class="sc_button_title">Android</span>
-																											<span
-																												class="sc_button_subtitle">Download</span>
+																											<img src="./elviscrypto/playstoreapp.png"></a>
 																										</span>
 																									</a>
 																								</div>
@@ -1235,26 +1232,22 @@
 																						</div>
 																						<div
 																							class="wpb_column vc_column_container vc_col-sm-6 sc_layouts_column_icons_position_left">
-																							<div
-																								class="vc_column-inner vc_custom_1521113575607">
-																								<div
-																									class="wpb_wrapper">
+																							<div class="vc_column-inner vc_custom_1521113575607">
+																								<div class="wpb_wrapper">
 																									<a href="https://cryptoclubs.app/#"
 																										id="sc_button_265652900"
 																										class="sc_button color_style_inverse sc_button_default sc_button_size_large sc_button_with_icon sc_button_icon_left sc_button_hover_slide_bottom sc_button_hover_style_dark"
 																										target="_blank">
-																										<span
+																										<!-- <span
 																											class="sc_button_icon">
 																											<span
 																												class="icon-icon-7"></span>
-																										</span>
+																										</span> -->
 																										<span
 																											class="sc_button_text">
-																											<span
-																												class="sc_button_title">iOS</span>
-																											<span
-																												class="sc_button_subtitle">Download</span>
-																										</span></a>
+																											<img src="./elviscrypto/appstoreapp.png" alt=""></a>
+																										</span>
+																									</a>
 																								</div>
 																							</div>
 																						</div>
@@ -1518,11 +1511,27 @@
 									<span class="vc_empty_space_inner"></span>
 								</div>
 								<div class="vc_wp_text wpb_content_element">
-									<div class="widget widget_text">
+									<!-- <footer  id="site-footer" style=""  class="site-footer site-footer-2 bg-gradient-2"> -->
+            
+										<div class="footer-bottom">
+											<div class="container">
+												<div class="row">
+												  <div class="col-md-6">
+													<p class="copyright-2 text-center">AfriCoin Connect © <script>document.write(new Date().getFullYear())</script>. All Rights Reserved .</p>
+												  </div>
+												  <div class="col-md-6">
+													<p class="copyright-2 text-center"> <a href="/terms.html">Terms and conditions</a> <a href="/policy.html" title="" style="margin-left:20px"> Privacy policy  </a> </p>
+												  </div>
+												</div>
+											</div>
+										</div>
+									<!-- </footer> -->
+									<!-- #site-footer -->
+									<!-- <div class="widget widget_text">
 										<div class="textwidget">
 											<p>AfriCoin Connect © 2023. All Rights Reserved.</p>
 										</div>
-									</div>
+									</div> -->
 								</div>
 							</div>
 						</div><!-- /.sc_content -->
@@ -1568,7 +1577,7 @@
 	<script type="text/javascript" src="./elviscrypto/trx_addons.js" id="trx_addons-js"></script>
 	<script type="text/javascript" src="./elviscrypto/superfish.min.js" id="superfish-js"></script>
 	<script type="text/javascript" src="./elviscrypto/front.min.js" id="wpgdprc-front-js-js"></script>
-	<script type="text/javascript" src="./elviscrypto/__scripts.js" id="lymcoin-init-js"></script>
+	<script type="text/javascript" src="./elviscrypto/scripts.js" id="lymcoin-init-js"></script>
 	<script type="text/javascript" src="./elviscrypto/mediaelement-and-player.min.js"
 		id="mediaelement-core-js"></script>
 	<script type="text/javascript" src="./elviscrypto/mediaelement-migrate.min.js"
