--- a/register.html
+++ b/register.html
@@ -571,7 +571,7 @@ function validate_password() {
 <script type="text/javascript" src="./elviscrypto/trx_addons.js" id="trx_addons-js"></script>
 <script type="text/javascript" src="./elviscrypto/superfish.min.js" id="superfish-js"></script>
 <script type="text/javascript" src="./elviscrypto/front.min.js" id="wpgdprc-front-js-js"></script>
-<script type="text/javascript" src="./elviscrypto/__scripts.js" id="lymcoin-init-js"></script>
+<script type="text/javascript" src="./elviscrypto/scripts.js" id="lymcoin-init-js"></script>
 <script type="text/javascript" src="./elviscrypto/mediaelement-and-player.min.js" id="mediaelement-core-js"></script>
 <script type="text/javascript" src="./elviscrypto/mediaelement-migrate.min.js" id="mediaelement-migrate-js"></script>
 <script type="text/javascript" id="mediaelement-js-extra">
