--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@
 													<p class="copyright-2 text-center">AfriCoin Connect © <script>document.write(new Date().getFullYear())</script>. All Rights Reserved .</p>
 												  </div>
 												  <div class="col-md-6">
-													<p class="copyright-2 text-center"> <a href="terms.html">Terms and conditions</a> <a href="policy.html" title="" style="margin-left:20px"> Privacy policy  </a> </p>
+													<p class="copyright-2 text-center"> <a href="terms.html/">Terms and conditions</a> <a href="policy.html/" title="" style="margin-left:20px"> Privacy policy  </a> </p>
 												  </div>
 												</div>
 											</div>
