--- a/terms.html
+++ b/terms.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <meta name="format-detection" content="telephone=no">
   <link rel="profile" href="https://gmpg.org/xfn/11">
-  <title>Login – Elvis Crypto</title>
+  <title>Terms and Conditions – AfriCoin Connect</title>
   <meta name="robots" content="max-image-preview:large">
   <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css"
@@ -1140,7 +1140,7 @@
                                 <p class="copyright-2 text-center">AfriCoin Connect © <script>document.write(new Date().getFullYear())</script>. All Rights Reserved .</p>
                               </div>
                               <div class="col-md-6">
-                                <p class="copyright-2 text-center"> <a href="terms.html">Terms and conditions</a> <a href="policy.html" title="" style="margin-left:20px"> Privacy policy  </a> </p>
+                                <p class="copyright-2 text-center"> <a href="terms.html/">Terms and conditions</a> <a href="policy.html/" title="" style="margin-left:20px"> Privacy policy  </a> </p>
                               </div>
                             </div>
                         </div>
