--- a/dashboard/app/user-profile.html
+++ b/dashboard/app/user-profile.html
@@ -893,7 +893,7 @@
       <footer class="footer">
           <div class="footer-body">
               <ul class="left-panel list-inline mb-0 p-0">
-                  <li class="list-inline-item"><a href="../../dashboard/extra/privacy-policy.html/" class="text-white">Privacy Policy</a></li>
+                  <li class="list-inline-item"><a href="../../dashboard/extra/privacy-policy.html" class="text-white">Privacy Policy</a></li>
                   <li class="list-inline-item"><a href="../../dashboard/extra/terms-of-service.html" class="text-white">Terms of Use</a></li>
               </ul>
               <div class="right-panel">
