--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<meta name="format-detection" content="telephone=no">
-	<title>AfriCoin Connect</title>
+	<title>AfriCoin Connect - AfriCoin Connect</title>
 	<meta name="robots" content="max-image-preview:large">
 	<link rel="dns-prefetch" href="https://fonts.googleapis.com/">
+	<link rel="icon" type="image/x-icon" href="./elviscrypto/favicon.ico">
 	<meta property="og:type" content="article">
 	<script type="text/javascript" id="www-widgetapi-script" src="./elviscrypto/www-widgetapi.js" async=""></script>
 	<script src="./elviscrypto/iframe_api"></script>
