--- a/register.html
+++ b/register.html
@@ -4,8 +4,9 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 <meta name="format-detection" content="telephone=no">
-<title>Register – Elvis Crypto</title>
+<title>Register – AfriCoin Connect</title>
 <meta name="robots" content="max-image-preview:large">
+<link rel="icon" type="image/x-icon" href="./elviscrypto/favicon.ico">
 <link rel="dns-prefetch" href="https://fonts.googleapis.com/">
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/intl-tel-input/16.0.8/css/intlTelInput.css" />
