--- a/login.html
+++ b/login.html
@@ -807,7 +807,7 @@
         //alert(plan);
         $.ajax({
           type: "POST",
-          url: "https://africoinconnect.com/api/auth/login/",
+          url: "https://admin.africoinconnect.com/api/auth/login/",
           data: formData,
           dataType: "json",
           encode: true,
