--- a/register.html
+++ b/register.html
@@ -530,7 +530,7 @@ function validate_password() {
        // alert($(this).serialize());exit;
         $.ajax({
           type: "POST",
-          url: "https://africoinconnect.com/api/auth/verify-phone/",
+          url: "https://admin.africoinconnect.com/api/auth/verify-phone/",
           data: formData,
           dataType: "json",
           encode: true,
