--- a/index.html
+++ b/index.html
@@ -1477,7 +1477,8 @@
 							'<span id="waitp_' + data['subscriptions-plans'][i].id + '" style="display: none;">' +
 							'<img class="logo_image" src="./elviscrypto/loading-gif.gif"  width="50" height="50" style="margin-left: 50px;">' +
 							'</span>' +
-							'<a id="buybtn_' + data['subscriptions-plans'][i].id + '"  onclick="buy_plan(' + data['subscriptions-plans'][i].id + ')" class="sc_price_item_link sc_button sc_button_hover_slide_bottom sc_button_hover_style_extra">Buy</a>' +
+							// '<a id="buybtn_' + data['subscriptions-plans'][i].id + '"  onclick="buy_plan(' + data['subscriptions-plans'][i].id + ')" class="sc_price_item_link sc_button sc_button_hover_slide_bottom sc_button_hover_style_extra">Buy</a>' +
+							'<a id="buybtn_' + data['subscriptions-plans'][i].id + '" href="#downloads"  class="sc_price_item_link sc_button sc_button_hover_slide_bottom sc_button_hover_style_extra">Buy in the App</a>' +
 							'</div>' +
 							'</div>' +
 							'</div>'
@@ -1520,7 +1521,7 @@
 							'<span id="waiti" style="display: none;">' +
 							'<img class="logo_image" src="./elviscrypto/loading-gif.gif"  width="50" height="50" style="margin-left: 50px;">' +
 							'</span>' +
-							'<a target="_blank" href="#" class="sc_price_item_link sc_button sc_button_hover_slide_bottom sc_button_hover_style_extra">Invest</a>' +
+							'<a target="_blank" href="#downloads" class="sc_price_item_link sc_button sc_button_hover_slide_bottom sc_button_hover_style_extra">Invest in the App</a>' +
 							'</div>' +
 							'</div>' +
 							'</div>'
