--- a/index.html
+++ b/index.html
@@ -928,7 +928,7 @@
 												<div id="sc_icons_1376960507"
 													class="sc_icons sc_icons_modern sc_icons_size_medium sc_align_center">
 													<div
-														class=" sc_item_columns trx_addons_columns_wrap columns_padding_bottom">
+														class="sc_price_columns_wrap sc_item_columns trx_addons_columns_wrap columns_padding_bottom">
 														<div class="trx_addons_column-1_4">
 															<div class="sc_icons_item">
 																<!-- <div id="sc_icons_1376960507_icon-paper-plane-light" class="sc_icons_icon sc_icon_type_ icon-paper-plane-light">
